POST on /attempts will execute the scheduled task immediately
