# swagger.yml
@@ -368,6 +368,32 @@ paths:
           schema:
             $ref: '#/definitions/Attempts'
 
+    post:
+        - admin: []
+        - owner: []
+      description: Immediately trigger an `Attempt` for the scheduled `Task`
+      parameters:
+        - name: account
+          in: path
+          description: account ID
+          required: true
+          type: string
+        - name: application
+          in: path
+          description: application name
+          required: true
+          type: string
+        - name: task
+          in: path
+          description: task name
+          required: true
+          type: string
+      responses:
+        200:
+          description: successful operation
+          schema:
+            $ref: '#/definitions/Attempts'
+
   /accounts/{account}/applications/{application}/queues:
     get:
       security:
